[package]
name = "lonely-star"
version = "0.1.0"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = { version = "0.6", default-features = false, features = ["audio_wav", "font_ttf", "texture_png"] }
rand = "0.8"
rand_pcg = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
